--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs-compat": "^6.5.4",
     "th-ng-commons": "0.0.18",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
